added ogp meta tags

--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -3,8 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
+    <meta
+      name="description"
+      content="A Frontend Mentor Challenge I completed on January 1st, 2023" />
+    <meta property="og:title" content="Product preview card component" />
+    <meta
+      property="og:description"
+      content="A Frontend Mentor Challenge I Completed on January 1st, 2023" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://github.com/Kashaan-M/front-end-mentor-challenges/blob/main/product-preview-card-component-main/images/image-product-mobile.jpg" />
+    <meta
+      property="og:url"
+      content="https://kashaan-m.github.io/front-end-mentor-challenges/product-preview-card-component-main/" />
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
