--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -45,7 +45,10 @@
         <section class="product-container">
           <article class="product-img">
             <picture>
-              <source media="(max-width:460px)" srcset="./images/image-product-mobile.jpg" />
+              <source
+                class="img-responsive"
+                media="(max-width:460px)"
+                srcset="./images/image-product-mobile.jpg" />
               <img src="./images/image-product-desktop.jpg" class="img-responsive" alt="" />
             </picture>
           </article>
