added og meta info

--- a/interactive-rating-component/index.html
+++ b/interactive-rating-component/index.html
@@ -11,8 +11,12 @@
       property="og:description"
       content="Front-End Portfolio - Interactive Rating Component Challenge" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
+    <meta
+      property="og:url"
+      content="https://kashaan-m.github.io/front-end-mentor-challenges/interactive-rating-component/" />
+    <meta
+      property="og:image"
+      content="https://github.com/Kashaan-M/front-end-mentor-challenges/blob/main/product-preview-card-component-main/images/image-product-desktop.jpg" />
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
